# TLDWatch

./: .env.example  .gitignore  pyproject.toml
.planning/: HANDOFF.json  PROJECT.md  REQUIREMENTS.md  ROADMAP.md  STATE.md  config.json
.planning/debug/: active-card-silence.md
.planning/phases/01-back-end-skeleton-storage-data-layout/: .continue-here.md  01-01-PLAN.md  01-01-SUMMARY.md  01-02-PLAN.md  01-02-SUMMARY.md  01-03-PLAN.md  01-03-SUMMARY.md  01-04-PLAN.md  01-04-SUMMARY.md  01-CONTEXT.md  01-DISCUSSION-LOG.md  01-IMPLEMENTATION-REVIEW.md  01-REVIEWS.md  01-UAT.md  SKELETON.md
.planning/phases/02-gpu-backend-detection-model-manager/: 02-01-PLAN.md  02-01-SUMMARY.md  02-02-PLAN.md  02-02-SUMMARY.md  02-03-PLAN.md  02-03-SPIKE.md  02-03-SUMMARY.md  02-04-PLAN.md  02-04-SUMMARY.md  02-05-PLAN.md  02-05-SUMMARY.md  02-CONTEXT.md  02-DISCUSSION-LOG.md  02-PATTERNS.md  02-RESEARCH.md  02-REVIEW-FIX.md  02-REVIEW.md  02-UAT.md  02-VALIDATION.md  02-VERIFICATION.md
.planning/phases/03-stt-adapter-audio-chunker-standalone-cli/: 03-01-PLAN.md  03-01-SUMMARY.md  03-02-PLAN.md  03-02-SUMMARY.md  03-03-PLAN.md  03-03-SUMMARY.md  03-CONTEXT.md  03-DISCUSSION-LOG.md  03-PATTERNS.md  03-RESEARCH.md  03-REVIEW.md  03-REVIEWS.md  03-SECURITY.md  03-UAT.md  03-VALIDATION.md  03-VERIFICATION.md
.planning/phases/04-job-orchestrator-persistent-queue-websocket-progress/: 04-01-PLAN.md  04-01-SUMMARY.md  04-02-PLAN.md  04-02-SUMMARY.md  04-03-PLAN.md  04-03-SUMMARY.md  04-04-PLAN.md  04-04-SUMMARY.md  04-05-PLAN.md  04-05-SUMMARY.md  04-06-PLAN.md  04-06-SUMMARY.md  04-CONTEXT.md  04-DISCUSSION-LOG.md  04-PATTERNS.md  04-RESEARCH.md  04-REVIEW.md  04-REVIEWS.md  04-VALIDATION.md  04-VERIFICATION.md
.planning/phases/05-local-file-ingest-history-ui-3-pane-layout/: .continue-here.md  05-01-PLAN.md  05-01-SUMMARY.md  05-02-PLAN.md  05-02a-PLAN.md  05-02a-SUMMARY.md  05-02b-PLAN.md  05-02b-SUMMARY.md  05-03-PLAN.md  05-UAT.md  (+20 more)
.planning/research/: ARCHITECTURE.md  FEATURES.md  PITFALLS.md  STACK.md  SUMMARY.md
app/: main.py
app/api/: dependencies.py  idempotency.py  routes_diagnostics.py  routes_health.py  routes_jobs.py  routes_models.py  routes_settings.py  routes_ws.py
app/cli/: __init__.py  transcribe.py
app/jobs/: cleanup.py  errors.py  ids.py  interrupt.py  manifest.py  orchestrator.py  progress.py  queue.py  reconcile.py  resume.py  service.py
app/models/: __init__.py  backend.py  common.py  diagnostics.py  diarization.py  hf_token.py  job.py  manager.py  manifest.py  presets.py  registry.py  settings.py  summary.py  transcript.py  vram.py
app/settings/: __init__.py  service.py
app/storage/: atomic.py  db.py  fs.py  models_dir.py  retry.py
app/util/: time.py
migrations/: 0001_initial.sql  0002_add_source_sha256.sql  0003_add_duration_s.sql  0004_add_language.sql  0005_add_summary_kinds_json.sql  0006_add_updated_at.sql  0007_add_stage_timestamps_json.sql  0008_idempotency_keys.sql  0009_add_original_filename.sql  README.md
tests/: _stt_fake.py  conftest.py  test_atomic_windows_retry.py  test_backend_registry.py  test_cancel.py  test_chunker.py  test_cleanup.py  test_cli_transcribe.py  test_concurrent_models.py  test_create_job.py  test_data_dir_validation.py  test_diagnostics_api.py  test_download_routes.py  test_event_bus.py  test_get_job_by_id.py  test_get_jobs.py  test_gpu_detect.py  test_health.py  test_hf_token.py  test_history_list.py  test_idempotency.py  test_manager_download.py  test_manifest_helpers.py  test_manifest_patch.py  test_migration_idempotency.py  test_openapi.py  test_orchestrator.py  test_original_filename.py  test_post_jobs_201_response.py  test_presets.py  test_reconcile.py  test_resume.py  test_settings.py  test_settings_phase2.py  test_settings_restart_required_header.py  test_spike_documented.py  test_stage_files.py  test_stage_to_status.py  test_stt_adapter.py  test_stt_boundary.py  (+12 more)
web/: package-lock.json  package.json  tsconfig.json  vitest.config.ts
web/scripts/: gen-types.sh
web/src/: App.tsx  main.tsx  styles.css
(+27 files in other folders)
