[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "transcription-and-notes-backend"
version = "0.1.0"
description = "Local-first back-end for the TranscriptionAndNotes app."
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.110",
    "uvicorn[standard]>=0.27",
    "pydantic>=2.6",
    "sqlalchemy[asyncio]>=2.0",
    "aiosqlite>=0.19",
    "aiofiles>=23",
    "python-dateutil>=2.8",
    # Phase 2: HF token shim + VRAM probe + HTTP client. Promoted from
    # dev to main so production installs get them. NO faster-whisper,
    # llama-cpp-python, pyannote.audio, or torch — those arrive in
    # their own phases (3, 8, 7) per RESEARCH Environment Availability
    # and the CONTEXT domain boundary.
    "huggingface_hub>=0.25",
    "psutil>=5.9",
    "httpx>=0.27",
    # Phase 3: STT adapter (D-08 — the verified-compatible pair). These
    # are the ONLY faster_whisper / ctranslate2 pins; the [project.scripts]
    # `transcribe` entry point is declared in 03-03 (not here, per Codex
    # HIGH: declaring it before app.cli.transcribe exists breaks editable
    # installs / smoke tests in Waves 1-2). nvidia-cublas-cu12 /
    # nvidia-cuda-runtime-cu12 are NOT added here — deferred to the SC-5
    # checkpoint in 03-03 which gates any CUDA-runtime-lib pip install on a
    # blocking-human verify (RESEARCH Pitfall 1 / Open Q1).
    "faster-whisper==1.2.1",
    "ctranslate2==4.7.2",
]

# Phase 3 (03-03): declare the `transcribe` console_scripts entry point HERE,
# not in 03-01. Per Codex HIGH: declaring it before app.cli.transcribe exists
# breaks editable installs / smoke tests in Waves 1-2. The entry point ships
# alongside the module it references.
[project.scripts]
transcribe = "app.cli.transcribe:main"

[project.optional-dependencies]
dev = [
    "pytest>=8",
    "pytest-asyncio>=0.23",
    "httpx>=0.27",
    "pytest-mock>=3.12",
]

[tool.setuptools.packages.find]
include = ["app*"]
exclude = ["tests*"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
